force-app/main/default/objects/Income_Source__c/Income_Source__c.object-meta.xml
<CustomObject>
    <description>Tracks different sources of income for loan applicants</description>
    <label>Income Source</label>
    <nameField>
        <displayFormat>INC-{0000000}</displayFormat>
        <label>Income Source Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Sources</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>