force-app/main/default/objects/Income_Source__c/fields/Applicant_Profile__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Applicant Profile</description>
    <inlineHelpText>Select the applicant profile this income source belongs to</inlineHelpText>
    <label>Applicant Profile</label>
    <referenceTo>Applicant_Profile__c</referenceTo>
    <relationshipLabel>Income Sources</relationshipLabel>
    <relationshipName>Income_Sources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>