force-app/main/default/objects/Income_Source__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <description>Name of the employer or income source</description>
    <inlineHelpText>Enter the name of the employer or organization providing income</inlineHelpText>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>