force-app/main/default/objects/Income_Source__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Frequency of income payments</description>
    <inlineHelpText>Select how often this income is received</inlineHelpText>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>