force-app/main/default/objects/Income_Source__c/fields/Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this income source has been verified</description>
    <inlineHelpText>Check if this income source has been verified</inlineHelpText>
    <label>Is Verified</label>
    <type>Checkbox</type>
</CustomField>