force-app/main/default/objects/Income_Source__c/fields/Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount__c</fullName>
    <description>Monthly income amount from this source</description>
    <inlineHelpText>Enter the monthly income amount from this source</inlineHelpText>
    <label>Monthly Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>