force-app/main/default/objects/Income_Source__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of income source</description>
    <inlineHelpText>Select the type of income source</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Self-Employment</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>