force-app/main/default/objects/Income_Source__c/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <description>Date when this income source was verified</description>
    <inlineHelpText>Enter the date when this income source was verified</inlineHelpText>
    <label>Verification Date</label>
    <type>Date</type>
</CustomField>