force-app/main/default/objects/Income_Source__c/validationRules/Employer_Required_If_Employment.validationRule-meta.xml
<ValidationRule>
    <fullName>Employer_Required_If_Employment</fullName>
    <active>true</active>
    <description>Requires employer name if income type is Employment</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Type__c, "Employment"),
    ISBLANK(Employer_Name__c)
)</errorConditionFormula>
    <errorDisplayField>Employer_Name__c</errorDisplayField>
    <errorMessage>Employer name is required when income type is Employment</errorMessage>
</ValidationRule>