force-app/main/default/objects/Income_Source__c/validationRules/Future_Verification_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Verification_Date</fullName>
    <active>true</active>
    <description>Ensures verification date cannot be in the future</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Verification_Date__c)),
    Verification_Date__c &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Verification_Date__c</errorDisplayField>
    <errorMessage>Verification date cannot be in the future</errorMessage>
</ValidationRule>