force-app/main/default/objects/Income_Source__c/validationRules/Positive_Income_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Income_Amount</fullName>
    <active>true</active>
    <description>Ensures monthly amount must be greater than 0</description>
    <errorConditionFormula>Monthly_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Monthly_Amount__c</errorDisplayField>
    <errorMessage>Monthly income amount must be greater than $0</errorMessage>
</ValidationRule>