force-app/main/default/objects/Income_Source__c/validationRules/Verification_Date_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Verification_Date_Logic</fullName>
    <active>true</active>
    <description>Requires verification date when Is_Verified is true</description>
    <errorConditionFormula>AND(
    Is_Verified__c = TRUE,
    ISBLANK(Verification_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Verification_Date__c</errorDisplayField>
    <errorMessage>Verification date is required when income source is marked as verified</errorMessage>
</ValidationRule>